--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,17 @@ body {
     margin: 0 auto;
 }
 
+.footer {
+    width: 350px;
+    height: 250px;
+    position: absolute;
+    top: 80%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 0 auto;
+}
+
 .wrapper {
     width: 100%;
     height: 100%;
