--- a/static/templates/main_page.tmpl
+++ b/static/templates/main_page.tmpl
@@ -22,6 +22,7 @@
             </tr>
         </table>
         </div>
+        <div class="footer"><img src="/static/img/rights.svg" width="334" height="40"></div>
     </div>
 </body>
 </html>
