--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,9 +4,9 @@ body {
 
 .header{
     width: 550px;
-    height: 250px;
+    height: 150px;
     position: absolute;
-    top: 0;
+    top: -10%;
     right: 0;
     bottom: 0;
     left: 0;
