--- a/static/templates/main_page.tmpl
+++ b/static/templates/main_page.tmpl
@@ -2,7 +2,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Search Tickets</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='/static/css/main.css'>
     <script src='main.js'></script>
@@ -11,14 +11,28 @@
     <div class="wrapper">
         <div class="header"><a href="/"><img src="/static/img/logo2.svg" width="500" height="500"></a></div>
         <div class="content">
-            <form id="check-all">
+            <form id="check-all" method="post" action="/results">
                 <table id="search">
                     <tr>
-                        <td><input type="text" id="first-input" placeholder="Откуда"></td>
-                        <td><input type="text" placeholder="Куда"></td>
-                        <td><input type="text" placeholder="Когда"></td>
-                        <td><input type="text" placeholder="Обратно"></td>
-                        <td><select id="last-input"><option></option><option></option></select></td>
+                        <td><label>Откуда</label></td>
+                        <td><label>Куда</label></td>
+                        <td><label>Когда</label></td>
+                        <td><label>Обратно</label></td>
+                        <td><label>Пассажиры и класс</label></td>
+                        <td><label></label></td>
+                    </tr>
+                    <tr>
+                        <td><select id="first-input"><option>Плесецк(Россия)</option><option>Байконур(Казахстан)</option><option>Капустин Яр(Россия)</option></select></td>
+                        <td><select><option>Луна</option><option>МКС</option></select></td>
+                        <td><input type="date" placeholder="Когда"></td>
+                        <td><input type="date" placeholder="Обратно"></td>
+                        <td>
+                        <select id="last-input">
+                        <option>1 Эконом</option><option>2 Эконом</option><option>3 Эконом</option>
+                        <option>1 Комфорт</option><option>2 Комфорт</option><option>3 Комфорт</option>
+                        <option>1 Бизнес</option><option>2 Бизнес</option><option>3 Бизнес</option>
+                        </select>
+                        </td>
                         <td><button id="search-tickets" type="submit">Найти билеты</button></td>
                     </tr>
                 </table>
