--- a/static/templates/search_result.tmpl
+++ b/static/templates/search_result.tmpl
@@ -1,9 +1,26 @@
 <html>
     <head>
         <title>Result Tickets</title>
+        <link rel="stylesheet" href="/static/css/res.css">
     </head>
     <body>
+        <div class="content-wrapper">
+        <header class="header">
+            <a href="/"><img src="/static/img/logo2.svg" width="350" height="350"></a>
+        </header>
 
+        <div class="container clearfix">
+            <aside class="sidebar sidebar1" style="text-align: right;">
+                CHECK CONSOLE LOG/
+            </aside>
+            <aside class="sidebar sidebar2">
+                /CHECK CONSOLE LOG
+            </aside>
+        </div>
 
+        <footer class="footer">
+            <img src="/static/img/rights.svg" width="334" height="40">
+        </footer>
+    </div>  
     </body>
 </html>
